textwire/testdata/good/before/008.with-component/index.tw
<ul>
    @component("user", { name: "Anna", age: 27 })
</ul>
