textwire/testdata/bad/duplicate-default-slot/index.tw
@component ("user", { name: "Anna" })
    @slot<p>Content 1</p>@end
    @slot<p>Content 2</p>@end
@end
